--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
