--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.2.4",
     "next": "13.2.4",
     "next-router": "^1.3.6",
     "react": "18.2.0",
