--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.2.4",
     "next": "13.2.4",
     "next-router": "^1.3.6",
     "react": "18.2.0",
@@ -28,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
     "sass": "^1.58.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zustand": "^4.3.6"
   }
 }
