--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "better-cmp": "^2.1.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.2.4",
