--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
+    "redux": "^4.2.1",
     "sass": "^1.58.3",
     "typescript": "4.9.5",
     "zustand": "^4.3.6"
