--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.12",
+    "@mui/lab": "^5.0.0-alpha.123",
+    "@mui/material": "^5.11.13",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^6.0.1",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "better-cmp": "^2.1.2",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.2.4",
@@ -30,6 +36,7 @@
     "react-otp-input": "^2.4.0",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
+    "styled-components": "^5.3.9",
     "typescript": "4.9.5",
     "zustand": "^4.3.6"
   }
