--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
     "styled-components": "^5.3.9",
