--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@eo-locale/core": "^1.5.1",
+    "@eo-locale/react": "^1.7.0",
+    "@lingui/react": "^3.17.2",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.11.13",
@@ -30,6 +33,7 @@
     "next": "13.2.4",
     "next-router": "^1.3.6",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
@@ -39,5 +43,9 @@
     "styled-components": "^5.3.9",
     "typescript": "4.9.5",
     "zustand": "^4.3.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "babel-core": "^7.0.0-bridge.0"
   }
 }
