Поменял выбор времени и календаря

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@eo-locale/core": "^1.5.1",
     "@eo-locale/react": "^1.7.0",
     "@lingui/react": "^3.17.2",
+    "@mobiscroll/cli": "^1.8.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
     "@mui/x-date-pickers": "^6.0.1",
+    "@rsuite/icons": "^1.0.2",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -39,6 +40,7 @@
     "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
     "redux": "^4.2.1",
+    "rsuite": "^5.28.3",
     "sass": "^1.58.3",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5",
