--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 7070",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
