--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@eo-locale/react": "^1.7.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "@react-google-maps/api": "^2.18.1",
     "@rsuite/icons": "^1.0.2",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
