--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-otp-input": "^2.4.0",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.1",
     "rsuite": "^5.28.3",
     "sass": "^1.58.3",
