--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@pbe/react-yandex-maps": "^1.2.3",
     "@react-google-maps/api": "^2.18.1",
     "@rsuite/icons": "^1.0.2",
+    "@types/google-map-react": "^2.1.7",
+    "@types/googlemaps": "^3.43.3",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -27,11 +29,13 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.2.4",
+    "google-map-react": "^2.2.0",
     "next": "13.2.4",
     "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-geocode": "^0.2.3",
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
